--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,83 @@
-name: Run Tests on PR
-on: pull_request
+name: CI/CD
+
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main ]
+  release:
+    types: [ published ]
+
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Run docker compose up
-        run: docker compose -f tests/docker-compose.yml up -d
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.11
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          pip install https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp311-cp311-manylinux_2_28_x86_64.whl
-          pip install -e .
-          sleep 60
-      - name: Test with pytest
-        run: |
-          pytest tests/
+    - uses: actions/checkout@v4
+    
+    - name: Install pixi
+      uses: prefix-dev/setup-pixi@v0.8.1
+      with:
+        pixi-version: v0.34.0
+        cache: true
+        
+    - name: Run tests
+      run: pixi run pytest tests/ -v
+      
+    - name: Check code formatting
+      run: |
+        pixi run black --check src/ tests/
+        pixi run isort --check-only src/ tests/
+        
+    - name: Lint code
+      run: pixi run flake8 src/ tests/
+      
+    - name: Test OMERO functionality (Linux only)
+      if: matrix.os == 'ubuntu-latest'
+      run: pixi run pytest tests/ -m omero -v
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Install pixi
+      uses: prefix-dev/setup-pixi@v0.8.1
+      with:
+        pixi-version: v0.34.0
+        cache: true
+        
+    - name: Build package
+      run: |
+        pixi run python -m build
+        
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: dist
+        path: dist/
+
+  publish:
+    needs: [test, build]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release'
+    environment: release
+    permissions:
+      id-token: write  # For trusted publishing
+      
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: dist
+        path: dist/
+        
+    - name: Publish to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
