--- a/pytest.ini
+++ b/pytest.ini
@@ -9,11 +9,10 @@ addopts =
     --strict-markers
     --disable-warnings
 markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
-    integration: marks tests as integration tests
-    unit: marks tests as unit tests
+    unit: marks tests as unit tests (fast, with mocks)
     omero: marks tests that require OMERO connection
-    docker: marks tests that require Docker
+    integration: marks tests as integration tests
+    slow: marks tests as slow (takes >5 seconds)
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
