--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,7 @@ micro_sam = ">=1.6.1,<2"
 jupyter = ">=1.1.1,<2"
 napari = ">=0.6.2,<0.7"
 zeroc-ice = ">=3.6.4,<3.7"
+kornia = "<0.7"
 
 # Development feature
 [tool.pixi.feature.dev.dependencies]
