--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ classifiers = [
 keywords = ["omero", "microscopy", "segmentation", "ai", "annotation", "sam", "micro-sam"]
 requires-python = ">=3.8"
 dependencies = [
-    "numpy>=1.21.0",
+    "numpy>=1.21.0,<2.0",
     "pandas>=1.3.0",
     "imageio>=2.9.0",
     "zarr>=2.10.0",
@@ -47,7 +47,7 @@ dependencies = [
     "ipywidgets>=7.6.0",
     "opencv-python>=4.5.0",
     "keyring>=23.0.0",
-    "ezomero>=2.1.0,<3", 
+    "ezomero>=3.1.0", 
     "ipykernel",
 ]
 
@@ -97,8 +97,6 @@ Changelog = "https://github.com/Leiden-Cell-Observatory/omero_annotate_ai/releas
 where = ["src"]
 include = ["omero_annotate_ai*"]
 
-
-
 [tool.black]
 line-length = 88
 target-version = ['py38']
@@ -129,6 +127,7 @@ zeroc-ice = ">=3.6.4,<3.7"
 kornia = "<0.7"
 ipykernel = ">=6.30.1,<7"
 pip = ">=25.2,<26"
+numpy = ">=1.21.0,<2.0"
 
 # Development feature
 [tool.pixi.feature.dev.dependencies]
@@ -178,5 +177,3 @@ docs-serve = {cmd = "cd docs/_build/html && python -m http.server 8000"}
 # Build tasks
 build-package = { cmd = "python -m build" }
 clean = {cmd = "rm -rf build/ dist/ *.egg-info/ && find . -type d -name __pycache__ -exec rm -rf {} + && find . -type f -name \"*.pyc\" -delete"}
-
-
