--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,9 @@ addopts = "--cov=omero_annotate_ai --cov-report=html --cov-report=term-missing"
 channels = ["conda-forge"]
 platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
 
+[tool.pixi.system-requirements]
+cuda = "12.8"
+
 # Default environment - minimal user installation
 [tool.pixi.dependencies]
 python = "3.11.*"
@@ -128,6 +131,9 @@ kornia = "<0.7"
 ipykernel = ">=6.30.1,<7"
 pip = ">=25.2,<26"
 numpy = ">=1.21.0,<2.0"
+pytorch = ">=2.7.1,<3"
+stackview = ">=0.18.0,<0.19"
+
 
 # Development feature
 [tool.pixi.feature.dev.dependencies]
