--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,8 +121,8 @@ addopts = "--cov=omero_annotate_ai --cov-report=html --cov-report=term-missing"
 channels = ["conda-forge"]
 platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
 
-[tool.pixi.system-requirements]
-cuda = "12.8"
+#[tool.pixi.system-requirements]
+#cuda = "12.8"
 
 # Default environment - minimal user installation
 [tool.pixi.dependencies]
@@ -158,6 +158,7 @@ mkdocs-literate-nav = ">=0.6.1"
 mkdocs-section-index = ">=0.3.8"
 mkdocs-autorefs = ">=0.5.0"
 mkdocstrings-python = ">=1.7.0"
+griffe-pydantic = ">=1.1.7"
 
 [tool.pixi.feature.dev.pypi-dependencies]
 build = "*"
