--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ docs = [
     "mkdocs-literate-nav>=0.6.1",
     "mkdocs-section-index>=0.3.8",
     "mkdocs-autorefs>=0.5.0",
+    "griffe-pydantic>=1.1.7",
 ]
 all = [
     "napari>=0.4.15",
