--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,7 +138,7 @@ pip = ">=25.2,<26"
 numpy = ">=1.21.0,<2.0"
 pytorch = ">=2.7.1,<3"
 stackview = ">=0.18.0,<0.19"
-
+hf-xet = "<1.1.9"
 
 # Development feature
 [tool.pixi.feature.dev.dependencies]
@@ -154,11 +154,11 @@ isort = ">=6.0.1,<7"
 mkdocs = ">=1.5.3"
 mkdocs-material = ">=9.5.9"
 mkdocstrings = ">=0.24.0"
+mkdocstrings-python = ">=1.7.0"
 mkdocs-gen-files = ">=0.5.0"
 mkdocs-literate-nav = ">=0.6.1"
 mkdocs-section-index = ">=0.3.8"
 mkdocs-autorefs = ">=0.5.0"
-mkdocstrings-python = ">=1.7.0"
 griffe-pydantic = ">=1.1.7"
 
 [tool.pixi.feature.dev.pypi-dependencies]
@@ -170,37 +170,27 @@ twine = "*"
 default = []
 dev = ["dev"]
 docs = ["docs"]
+dev-docs = ["dev", "docs"]
 
 [tool.pixi.pypi-dependencies]
 omero-annotate-ai = { path = ".", editable = true }
 
 [tool.pixi.tasks]
-# Testing tasks
+# Testing
 test = {cmd = "pytest tests/ -v"}
 test-unit = {cmd = "pytest tests/ -v -m \"not (omero or integration or docker)\""}
-test-integration = {cmd = "cd tests && docker-compose up -d && echo \"Waiting for OMERO server...\" && timeout 60 && pytest tests/test_omero_integration.py -v -m \"omero or integration\" && docker-compose down -v"}
-test-omero = {cmd = "pytest tests/ -v -m \"omero\""}
 test-cov = { cmd = "pytest tests/ --cov=omero_annotate_ai --cov-report=xml" }
 
-# Code quality tasks
+# Code quality
 lint = { cmd = "flake8 src/omero_annotate_ai && black --check src/omero_annotate_ai && isort --check-only src/omero_annotate_ai" }
 format = { cmd = "black src/omero_annotate_ai && isort src/omero_annotate_ai" }
-format-check = { cmd = "black --check src/ tests/" }
-sort-imports = { cmd = "isort src/ tests/" }
-sort-imports-check = { cmd = "isort --check-only src/ tests/" }
-check = {cmd = "pixi run lint && pixi run test-unit"}
 
-# OMERO server management
-start-omero = {cmd = "cd tests && docker-compose up -d && echo \"OMERO server starting... wait ~60 seconds for full startup\" && echo \"OMERO.web will be available at http://localhost:5080\" && echo \"OMERO server ports: 6063, 6064\""}
-stop-omero = {cmd = "cd tests && docker-compose down -v"}
-
-# Documentation tasks
-docs-build = {cmd = "mkdocs build"}
+# Documentation
 docs-serve = {cmd = "mkdocs serve"}
-docs-deploy = {cmd = "mkdocs gh-deploy"}
-mkdocs-serve = {cmd = "mkdocs serve"}
-mkdocs-build = {cmd = "mkdocs build"}
+docs-build = {cmd = "mkdocs build"}
 
-# Build tasks
-build-package = { cmd = "python -m build" }
+# Development
+start-omero = {cmd = "cd tests && docker-compose up -d"}
+stop-omero = {cmd = "cd tests && docker-compose down -v"}
+build = { cmd = "python -m build" }
 clean = {cmd = "rm -rf build/ dist/ *.egg-info/ && find . -type d -name __pycache__ -exec rm -rf {} + && find . -type f -name \"*.pyc\" -delete"}
