--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,19 +28,14 @@ jobs:
         environments: dev
         
     - name: Run unit tests
-      run: pixi run -e dev pytest tests/ -m "not (omero or integration or docker)" -v
+      run: pixi run -e dev test-unit
       
-    - name: Check code formatting
-      run: |
-        pixi run -e dev black --check src/ tests/
-        pixi run -e dev isort --check-only src/ tests/
-        
-    - name: Lint code
-      run: pixi run -e dev flake8 src/ tests/
+    - name: Check code quality
+      run: pixi run -e dev lint
       
     - name: Test OMERO functionality (Linux only)
       if: matrix.os == 'ubuntu-latest'
-      run: pixi run -e dev pytest tests/ -m "omero or integration" -v
+      run: pixi run -e dev test
 
   build:
     needs: test
@@ -50,17 +45,16 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Install pixi
-      uses: prefix-dev/setup-pixi@v0.8.1
+      uses: prefix-dev/setup-pixi@v0.9.0
       with:
-        pixi-version: v0.34.0
+        pixi-version: v0.55.0
         cache: true
         cache-write: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
         locked: true
         environments: dev
         
     - name: Build package
-      run: |
-        pixi run -e dev python -m build
+      run: pixi run -e dev build
         
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
