--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,11 @@ dependencies = [
     "pydantic>=2.0.0",
     "typing-extensions>=4.0.0",
     "ipywidgets>=7.6.0",
-    "opencv-python>=4.5.0",
     "keyring>=23.0.0",
     "ezomero>=3.1.0", 
-    "ipykernel", "pixi-kernel>=0.6.6,<0.7",
+    "ipykernel", 
+    "pixi-kernel>=0.6.6,<0.7", 
+    "opencv-python",
 ]
 
 [project.optional-dependencies]
