Add comprehensive tutorials and styling for OMERO Annotate AI documentation
- Introduced a new abbreviations document for key terms and acronyms.
- Created a custom CSS stylesheet for enhanced visual presentation of documentation.
- Added tutorials for batch processing, BiaPy integration, and Cellpose integration, detailing workflows and prerequisites.
- Developed a detailed tutorial for the micro-SAM annotation pipeline, covering setup, execution, and result review.
- Included a tutorial on preparing training data from OMERO annotations, outlining essential steps and considerations.
- Updated the tutorials index to reflect new content and provide a structured learning path.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -195,3 +195,6 @@ start-omero = {cmd = "cd tests && docker-compose up -d"}
 stop-omero = {cmd = "cd tests && docker-compose down -v"}
 build = { cmd = "python -m build" }
 clean = {cmd = "rm -rf build/ dist/ *.egg-info/ && find . -type d -name __pycache__ -exec rm -rf {} + && find . -type f -name \"*.pyc\" -delete"}
+
+[dependency-groups]
+docs = ["mkdocs-glightbox>=0.5.1,<0.6"]
