--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -17,7 +17,7 @@ dependencies:
 - hf-xet <1.1.9
 - pip
 - pip:
-  - -e .
+  - -e /home/jovyan/
   - numpy>=1.21.0, <2.0
   - pandas>=1.3.0
   - imageio>=2.9.0
