--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -5,20 +5,25 @@ channels:
 dependencies:
 - python 3.11.*
 - micro_sam >=1.6.1,<2
-- jupyter >=1.1.1,<2
+- jupyterlab
+- jupytext
+- jupyterlab-myst
 - napari >=0.6.2,<0.7
 - zeroc-ice >=3.6.4,<3.7
 - kornia <0.7
 - ipykernel >=6.30.1,<7
 - pip >=25.2,<26
 - numpy >=1.21.0,<2.0
+- pyqt
 - pytorch >=2.7.1,<3
 - stackview >=0.18.0,<0.19
 - hf-xet <1.1.9
+- websockify
 - pip
 - pip:
   - -e ..
   - numpy>=1.21.0, <2.0
+  - jupyter-remote-desktop-proxy
   - pandas>=1.3.0
   - imageio>=2.9.0
   - zarr>=2.10.0
