--- a/pyproject.toml
+++ b/pyproject.toml
@@ -162,6 +162,9 @@ mkdocs-section-index = ">=0.3.8"
 mkdocs-autorefs = ">=0.5.0"
 griffe-pydantic = ">=1.1.7"
 
+[tool.pixi.feature.streamlit.dependencies]
+streamlit = ">=1.28.0"
+
 [tool.pixi.feature.dev.pypi-dependencies]
 build = "*"
 twine = "*"
@@ -172,6 +175,7 @@ default = []
 dev = ["dev"]
 docs = ["docs"]
 dev-docs = ["dev", "docs"]
+streamlit = ["streamlit"]
 
 [tool.pixi.pypi-dependencies]
 omero-annotate-ai = { path = ".", editable = true }
@@ -195,6 +199,9 @@ start-omero = {cmd = "cd tests && docker-compose up -d"}
 stop-omero = {cmd = "cd tests && docker-compose down -v"}
 build = { cmd = "python -m build" }
 clean = {cmd = "rm -rf build/ dist/ *.egg-info/ && find . -type d -name __pycache__ -exec rm -rf {} + && find . -type f -name \"*.pyc\" -delete"}
+
+# Streamlit GUI
+streamlit-app = "streamlit run gui/streamlit_prototype/app.py"
 
 # Publishing tasks
 check-package = { cmd = "python -m twine check dist/*" }
