Update dependencies and enhance configuration loading
- Added 'tifffile' to project dependencies in pyproject.toml
- Updated SHA256 checksum for the package in pixi.lock
- Imported 'load_config_from_yaml' in __init__.py for improved configuration handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,8 @@ dependencies = [
     "ezomero>=3.1.0", 
     "ipykernel", 
     "pixi-kernel>=0.6.6,<0.7", 
-    "opencv-python",
+    "opencv-python", 
+    "tifffile",
 ]
 
 [project.optional-dependencies]
