--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,7 +112,7 @@ python_functions = ["test_*"]
 addopts = "--cov=omero_annotate_ai --cov-report=html --cov-report=term-missing"
 
 # Pixi configuration
-[tool.pixi.project]
+[tool.pixi.workspace]
 channels = ["conda-forge"]
 platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
 
