--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dependencies = [
     "ipykernel", 
     "pixi-kernel>=0.6.6,<0.7", 
     "opencv-python", 
-    "tifffile",
+    "tifffile", "marimo>=0.19.2,<0.20", "ty>=0.0.12,<0.0.13",
 ]
 
 [project.optional-dependencies]
@@ -122,7 +122,7 @@ platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
 # Default environment - minimal user installation
 [tool.pixi.dependencies]
 python = "3.11.*"
-micro_sam = ">=1.6.1,<2"
+micro_sam = ">=1.7.0,<2"
 jupyter = ">=1.1.1,<2"
 napari = ">=0.6.2,<0.7"
 zeroc-ice = ">=3.6.4,<3.7"
