--- a/pyproject.toml
+++ b/pyproject.toml
@@ -193,3 +193,4 @@ clean = {cmd = "rm -rf build/ dist/ *.egg-info/ && find . -type d -name __pycach
 
 [dependency-groups]
 docs = ["mkdocs-glightbox>=0.5.1,<0.6"]
+dev = ["ty>=0.0.12,<0.0.13"]
