feat: Add table schema validation and enhance training data preparation tests
- Implemented a new utility function `validate_table_schema` to ensure required columns and data integrity in DataFrames used for training data preparation.
- Added unit tests for the `mark_processed` method in the `ImageAnnotation` class to verify timestamp handling and optional ID settings.
- Enhanced existing tests in `TestPrepareTrainingDataFromTable` and `TestPrepareDatasetFromTable` to ensure consistent behavior and validate folder structures.
- Introduced tests for folder structure consistency across training data preparation functions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -199,3 +199,4 @@ verify-build = { cmd = "python -m zipfile -l dist/*.whl && tar -tzf dist/*.tar.g
 
 [dependency-groups]
 docs = ["mkdocs-glightbox>=0.5.1,<0.6"]
+dev = ["ty>=0.0.12,<0.0.13"]
