--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,10 @@ maintainers = [
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
-    "Intended Audience :: Science/Research", 
+    "Intended Audience :: Science/Research",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -34,40 +32,38 @@ classifiers = [
     "Environment :: Other Environment",
 ]
 keywords = ["omero", "microscopy", "segmentation", "ai", "annotation", "sam", "micro-sam"]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
     "numpy>=1.21.0,<2.0",
     "pandas>=1.3.0",
     "imageio>=2.9.0",
-    "zarr>=2.10.0",
     "dask>=2021.6.0",
     "pyyaml>=6.0",
     "pydantic>=2.0.0",
     "typing-extensions>=4.0.0",
-    "ipywidgets>=7.6.0",
-    "keyring>=23.0.0",
-    "ezomero>=3.1.0", 
-    "ipykernel", 
-    "pixi-kernel>=0.6.6,<0.7", 
-    "opencv-python", 
+    "ezomero>=3.1.0",
+    "opencv-python",
     "tifffile",
-    "marimo>=0.19.2,<0.20",  # Dependencies for marimo-based notebook UI
 ]
 
 [project.optional-dependencies]
+notebooks = [
+    "ipywidgets>=7.6.0",
+    "ipykernel",
+    "pixi-kernel>=0.6.6,<0.7",
+    "marimo>=0.19.2,<0.20",
+    "keyring>=23.0.0",
+]
 microsam = [
     "napari>=0.4.15",
     # Note: micro-sam is conda-only, install with: conda install -c conda-forge micro-sam
-    # or use: pixi install (recommended for full environment)
 ]
-
 dev = [
     "pytest>=6.0",
     "pytest-cov>=2.0",
     "black>=22.0",
     "isort>=5.0",
     "flake8>=4.0",
-    "ty>=0.0.12,<0.0.13",
 ]
 docs = [
     "mkdocs>=1.5.3",
@@ -81,10 +77,7 @@ docs = [
     "griffe-pydantic>=1.1.7",
 ]
 all = [
-    "napari>=0.4.15",
-    # Note: micro-sam must be installed via conda
-    # conda install -c conda-forge micro-sam
-    # or use: pixi install (recommended)
+    "omero-annotate-ai[notebooks,microsam]",
 ]
 
 [project.urls]
@@ -100,7 +93,7 @@ include = ["omero_annotate_ai*"]
 
 [tool.black]
 line-length = 88
-target-version = ['py38']
+target-version = ['py310']
 
 [tool.isort]
 profile = "black"
