fix: update license information and sha256 checksum in pixi.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ name = "omero-annotate-ai"
 version = "0.2.1"
 description = "OMERO integration for AI-powered image annotation and segmentation workflows"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = "Apache-2.0"
+license-files = ["LICENSE"]
 authors = [
     {name = "Maarten Paul", email = "m.w.paul@lumc.nl"},
 ]
@@ -17,7 +18,6 @@ maintainers = [
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
