feat: add download_annotation_config_from_omero function to retrieve YAML annotations
- Implemented download_annotation_config_from_omero to download and parse annotation config YAML from OMERO.
- Updated WorkflowWidget to save annotation config files with unique names based on the workflow name.
- Modified pyproject.toml to include 'all' in the dev environment.
- Added unit tests for download_annotation_config_from_omero to ensure correct behavior in various scenarios.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -157,7 +157,7 @@ twine = "*"
 # Environment definitions
 [tool.pixi.environments]
 default = []
-dev = ["dev"]
+dev = ["dev","all"]
 docs = ["docs"]
 dev-docs = ["dev", "docs"]
 
